[package]
name = "aghpb"
description="Anime girls holding programming books API wrapper for 🦀Rust."
authors = ["Goldy"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/aghpb"
repository = "https://github.com/THEGOLDENPRO/aghpb.rs"
edition = "2021"
version = "1.3.0"

[dependencies]
reqwest = "0.11.18"
image = "0.24.6"
serde_json = "1"
chrono = "0.4.31"
bytes = "1.5.0"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
